i did good things

--- a/about-us.html
+++ b/about-us.html
@@ -6,36 +6,41 @@
 		<link rel="stylesheet" href="css/animation.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
-		<title>They Are Your Classmates</title>
+		<title>About Us | They Are Your Classmates</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 	</head>
 	<body>
 		<section id="bg-about-us" class="background">
-      <nav id="container-home-nav">
+      		<nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
 				<div id="container-mobile-links">
 					<a class="text-link" href="about-us.html">ABOUT US</a>
 					<a class="text-link" href="thank-you.html">THANK YOU</a>
 				</div>
 			</nav>
-      <section id="about-us-text">
-        <div class="fade-in">
-          <p class="para-fade">Our names are Veronica and Charlene and we are the designers and developers behind <em>They Are Your Classmates</em>.
-            We are both Canadian-born Chinese who speak English as our primary language, so we never experienced any of the hardships that
-            Chinese international students experience. However, we have observed throughout our lives that there is a stigma towards
-            Chinese international students within our society and a tendency for Canadian students to have prejudices and misconceptions about them.
-            Truthfully, in grade school we also had many of these prejudices and misconceptions, despite being Chinese ourselves.
-            Our aim for this project was to understand why these misconceptions exist and connect to Chinese International students to understand their
-            perspectives better and perhaps reconsider our own views and opinions on them.</p>
+			<section class="container-button-back">
+				<a class="button-back" href="javascript: history.go(-1)">
+					<img src="img/back.png" alt="back button">
+				</a>
+			</section>
+      		<section id="about-us-text">
+				<div class="fade-in">
+					<p class="para-fade">Our names are Veronica and Charlene and we are the designers and developers behind <em>They Are Your Classmates</em>.
+					We are both Canadian-born Chinese who speak English as our primary language, so we never experienced any of the hardships that
+					Chinese international students experience. However, we have observed throughout our lives that there is a stigma towards
+					Chinese international students within our society and a tendency for Canadian students to have prejudices and misconceptions about them.
+					Truthfully, in grade school we also had many of these prejudices and misconceptions, despite being Chinese ourselves.
+					Our aim for this project was to understand why these misconceptions exist and connect to Chinese International students to understand their
+					perspectives better and perhaps reconsider our own views and opinions on them.</p>
 
-          <p class="para-fade"><em>They Are Your Classmates</em> was our way of connecting with these students that we largely ignored in school.
-            Through our research and experience creating this project, we have learned and empathized with these students’ stories;
-            now we want to share them with you, in hopes that you will learn something too.</p>
-        </div>
-      </section>
-      <a class="text-link" id="about-link" href="about-us.html">ABOUT US</a>
+					<p class="para-fade"><em>They Are Your Classmates</em> was our way of connecting with these students that we largely ignored in school.
+					Through our research and experience creating this project, we have learned and empathized with these students’ stories;
+					now we want to share them with you, in hopes that you will learn something too.</p>
+				</div>
+			</section>
+     		<a class="text-link" id="about-link" href="about-us.html">ABOUT US</a>
 			<a class="text-link" id="thanks-link" href="thank-you.html">THANK YOU</a>
-    </section>
+    	</section>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="js/fading-text.js"></script>
