--- a/conclusion.html
+++ b/conclusion.html
@@ -7,10 +7,10 @@
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
-		<title>Thank You | They Are Your Classmates</title>
+		<title>Conclusion | They Are Your Classmates</title>
 	</head>
 	<body>
-		<section id="bg-thankyou" class="background">
+		<section id="bg-conclusion" class="background">
       <nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
 				<div id="container-mobile-links">
@@ -21,22 +21,21 @@
       <section class="container-button-back">
         <a class="button-back" href="javascript: history.go(-1)">
           <img src="img/back.png" alt="back button">
+          <span>back to stories</span>
         </a>
       </section>
-      <section id="thank-you-text">
-        <div id="container-thankyou-fade-1">
+      <section id="conclusion-text">
+        <div id="container-conclusion-fade-1">
           <div class="fade-in">
-            <p class="para-fade">According to the <a class="in-text-link" href="http://cbie.ca/media/facts-and-figures/">Canadian Bureau for International Education (2016)</a>,
-            one of the top 3 reasons why international students choose Canada is because of its reputation as a tolerant and non-discriminatory society.</p>
+            <p class="para-fade">Optional fade in paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse elementum odio orci, et vulputate nunc malesuada ut.</p>
             <button class="button-next">next ></button>
           </div>
         </div>
-        <div id="container-thankyou-fade-2" class="not-initially-visible">
+        <div id="container-conclusion-fade-2" class="not-initially-visible">
           <div>
-            <p class="para-fade">From the creators of <em>They Are Your Classmates</em>, Veronica and Charlene:</p>
-            <p class="para-fade">Thank you for opening your mind and heart to your fellow classmates and taking the time to experience their stories and perspectives.
-              We hope there is something—be it sympathy, thought, perspective, or anything else—that you can take away from this experience.
-              If you were impacted by your classmates' stories, we hope that you might pass them on to others.</p>
+            <p class="para-fade">Conclusion paragraph here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse elementum odio orci, et vulputate nunc malesuada ut. Curabitur a pharetra leo, id fringilla libero. Nam sit amet tincidunt risus, sed ultricies nunc. Fusce sollicitudin sagittis justo, quis efficitur mi fringilla feugiat. Nulla vel placerat risus, ac euismod dolor. Phasellus sed sapien sagittis, sollicitudin massa in, ultricies elit. Etiam tempus, mauris in ultricies pharetra, enim odio accumsan libero, non condimentum leo purus id mi. Phasellus semper consectetur scelerisque.
+            </p>
+            <button class="button-next" onclick="window.location.href='thank-you.html'">Read our Thank You ></button>
             <div id="container-share-buttons">
               <a class="button-share" id="fb" href="https://www.facebook.com/sharer/sharer.php?u=theyareyourclassmates.ca" target="_blank">Share on Facebook</a>
               <a class="button-share" id="twitter" href="https://twitter.com/share?url=http://www.theyareyourclassmates.ca&text=The%20Chinese%20international%20student%20experience%20in%20Canadian%20high%20schools" target="_blank">Share on Twitter</a>
