--- a/stories.html
+++ b/stories.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
-		<title>They Are Your Classmates</title>
+		<title>Stories | They Are Your Classmates</title>
 	</head>
 	<body id="stories-page">
 		<section id="bg-stories" class="background">
