--- a/conclusion.html
+++ b/conclusion.html
@@ -26,22 +26,16 @@
       </section>
       <section id="conclusion-text">
         <div id="container-conclusion-fade-1">
-          <div class="fade-in">
-            <p class="para-fade">Optional fade in paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse elementum odio orci, et vulputate nunc malesuada ut.</p>
-            <button class="button-next">next ></button>
-          </div>
-        </div>
-        <div id="container-conclusion-fade-2" class="not-initially-visible">
-          <div>
-            <p class="para-fade">Conclusion paragraph here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse elementum odio orci, et vulputate nunc malesuada ut. Curabitur a pharetra leo, id fringilla libero. Nam sit amet tincidunt risus, sed ultricies nunc. Fusce sollicitudin sagittis justo, quis efficitur mi fringilla feugiat. Nulla vel placerat risus, ac euismod dolor. Phasellus sed sapien sagittis, sollicitudin massa in, ultricies elit. Etiam tempus, mauris in ultricies pharetra, enim odio accumsan libero, non condimentum leo purus id mi. Phasellus semper consectetur scelerisque.
-            </p>
-            <button class="button-next" onclick="window.location.href='thank-you.html'">Read our Thank You ></button>
-            <div id="container-share-buttons">
-              <a class="button-share" id="fb" href="https://www.facebook.com/sharer/sharer.php?u=theyareyourclassmates.ca" target="_blank">Share on Facebook</a>
-              <a class="button-share" id="twitter" href="https://twitter.com/share?url=http://www.theyareyourclassmates.ca&text=The%20Chinese%20international%20student%20experience%20in%20Canadian%20high%20schools" target="_blank">Share on Twitter</a>
-            </div>
-          </div>
-        </div>
+					<div class="fade-in">
+	          <p class="para-fade">According to the <a class="in-text-link" href="http://cbie.ca/media/facts-and-figures/">Canadian Bureau for International Education (2016)</a>, one of the top 3 reasons why international students choose Canada is because of its reputation as a tolerant and non-discriminatory society.</p>
+	          <p class="para-fade">
+							Though Vivian, Andy, and Ruiwen speak about their struggles in Canadian schools, they have all expressed to us that they are grateful to be living and studying in a safe, caring country like Canada. They understand that there are negative assumptions about them, but do not fault people for those assumptions because it results from the disconnect between Canadian students and Chinese international students, which is the responsibility of both groups to bridge. They do not ask for much from the people who read their stories—they simply hope that their stories can help give perspective about why it can be hard to integrate into Canadian culture.
+	          </p>
+						<div class="container-buttons">
+	          	<a class="button-default" href="thank-you.html">Read our Thank Yous</a>
+						</div>
+					</div>
+      	</div>
       </section>
       <a class="text-link" id="about-link" href="about-us.html">ABOUT US</a>
 			<a class="text-link" id="thanks-link" href="thank-you.html">THANK YOU</a>
