--- a/thank-you.html
+++ b/thank-you.html
@@ -26,18 +26,12 @@
       <section id="thank-you-text">
         <div id="container-thankyou-fade-1">
           <div class="fade-in">
-            <p class="para-fade">According to the <a class="in-text-link" href="http://cbie.ca/media/facts-and-figures/">Canadian Bureau for International Education (2016)</a>,
-            one of the top 3 reasons why international students choose Canada is because of its reputation as a tolerant and non-discriminatory society.</p>
-            <button class="button-next">next ></button>
-          </div>
-        </div>
-        <div id="container-thankyou-fade-2" class="not-initially-visible">
-          <div>
             <p class="para-fade">From the creators of <em>They Are Your Classmates</em>, Veronica and Charlene:</p>
+						<p class="para-fade">We are so grateful for Vivian, Andy, and Ruiwen’s bravery and sincerity in sharing their personal stories with us and our audience. They took hours out of their day to answer our questions, help us understand their perspectives, and record video and audio for us to share with you. We cannot thank them enough for their help in creating a better understanding for Chinese international students’ struggles in the classroom.</p>
             <p class="para-fade">Thank you for opening your mind and heart to your fellow classmates and taking the time to experience their stories and perspectives.
               We hope there is something—be it sympathy, thought, perspective, or anything else—that you can take away from this experience.
               If you were impacted by your classmates' stories, we hope that you might pass them on to others.</p>
-            <div id="container-share-buttons">
+            <div class="container-buttons">
               <a class="button-share" id="fb" href="https://www.facebook.com/sharer/sharer.php?u=theyareyourclassmates.ca" target="_blank">Share on Facebook</a>
               <a class="button-share" id="twitter" href="https://twitter.com/share?url=http://www.theyareyourclassmates.ca&text=The%20Chinese%20international%20student%20experience%20in%20Canadian%20high%20schools" target="_blank">Share on Twitter</a>
             </div>
