Adds conclusion bg photo, fixes vertical responsiveness in stories page, ensures validation of css and html

--- a/conclusion.html
+++ b/conclusion.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
@@ -27,9 +26,9 @@
       <section id="conclusion-text">
         <div id="container-conclusion-fade-1">
 					<div class="fade-in">
-	          <p class="para-fade">According to the <a class="in-text-link" href="http://cbie.ca/media/facts-and-figures/">Canadian Bureau for International Education (2016)</a>, one of the top 3 reasons why international students choose Canada is because of its reputation as a tolerant and non-discriminatory society.</p>
+	          <p class="para-fade">According to the <a class="in-text-link" target="_blank" href="http://cbie.ca/media/facts-and-figures/">Canadian Bureau for International Education (2016)</a>, one of the top 3 reasons why international students choose Canada is because of its reputation as a tolerant and non-discriminatory society.</p>
 	          <p class="para-fade">
-							Though Vivian, Andy, and Ruiwen speak about their struggles in Canadian schools, they have all expressed to us that they are grateful to be living and studying in a safe, caring country like Canada. They understand that there are negative assumptions about them, but do not fault people for those assumptions because it results from the disconnect between Canadian students and Chinese international students, which is the responsibility of both groups to bridge. They do not ask for much from the people who read their stories—they simply hope that their stories can help give perspective about why it can be hard to integrate into Canadian culture.
+							Though we have heard about Chinese international students' struggles in Canadian schools, the students we interviewed have all expressed to us that they are grateful to be living and studying in a safe, caring country like Canada. They understand that there are negative assumptions about them, but do not fault people for those assumptions because they result from the disconnect between Canadian students and Chinese international students, which is the responsibility of both groups to bridge. They do not ask for much from the people who read their stories—they simply hope that their stories can help give perspective about why it can be hard to integrate into Canadian culture.
 	          </p>
 						<div class="container-buttons">
 	          	<a class="button-default" href="thank-you.html">Read our Thank Yous</a>
