--- a/stories.html
+++ b/stories.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
@@ -14,7 +13,7 @@
 			<nav id="container-home-nav">
 				<a id="home-link" href="index.html">they are your classmates</a>
 				<div id="container-mobile-links">
-					<a class="text-link" href="#">ABOUT US</a>
+					<a class="text-link" href="about-us.html">ABOUT US</a>
 					<a class="text-link" href="thank-you.html">THANK YOU</a>
 				</div>
 			</nav>
@@ -28,14 +27,14 @@
 				</div>
 				<div id="container-stories-explanation-2" class="not-initially-visible">
 					<div>
-						<p class="para-fade" id="stories-para-fade-3">Let’s explore some of their personal stories, from their own perspectives.</p>
+						<p class="para-fade" id="stories-para-fade-3">Let’s explore some real stories from Chinese international students, from their perspectives.</p>
 					</div>
 				</div>
 			</section>
 
 			<section id="story-selection">
 				<div id="container-brushes">
-					<a id="brush-link-vivian" class="brush-link" href="vivian.html"></a>
+					<a id="brush-link-vivian" class="brush-link"></a>
 					<div class="container-brush" id="vivian">
 						<img src="img/brush-vivian.svg" alt="yellow brush stroke">
 						<div class="container-story-text">
@@ -60,7 +59,7 @@
 					</div>
 				</div>
 			</section>
-			<a class="text-link" id="about-link" href="#">ABOUT US</a>
+			<a class="text-link" id="about-link" href="about-us.html">ABOUT US</a>
 			<a class="text-link" id="thanks-link" href="thank-you.html">THANK YOU</a>
 		</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
