--- a/thank-you.html
+++ b/thank-you.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
@@ -27,8 +26,8 @@
         <div id="container-thankyou-fade-1">
           <div class="fade-in">
             <p class="para-fade">From the creators of <em>They Are Your Classmates</em>, Veronica and Charlene:</p>
-						<p class="para-fade">We are so grateful for Vivian, Andy, and Ruiwen’s bravery and sincerity in sharing their personal stories with us and our audience. They took hours out of their day to answer our questions, help us understand their perspectives, and record video and audio for us to share with you. We cannot thank them enough for their help in creating a better understanding for Chinese international students’ struggles in the classroom.</p>
-            <p class="para-fade">Thank you for opening your mind and heart to your fellow classmates and taking the time to experience their stories and perspectives.
+						<p class="para-fade">We are so grateful for our Chinese international student interviewees' bravery and sincerity in sharing their personal stories with us and our audience. They took hours out of their day to answer our questions, help us understand their perspectives, and record video and audio for us to share with you. We cannot thank them enough for their help in creating a better understanding for Chinese international students’ struggles in the classroom.</p>
+            <p class="para-fade">We also want to thank you for opening your mind and heart to your fellow classmates and taking the time to experience their stories and perspectives.
               We hope there is something—be it sympathy, thought, perspective, or anything else—that you can take away from this experience.
               If you were impacted by your classmates' stories, we hope that you might pass them on to others.</p>
             <div class="container-buttons">
