--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,11 +29,11 @@
 					Chinese international students experience. However, we have observed throughout our lives that there is a stigma towards
 					Chinese international students within our society and a tendency for Canadian students to have prejudices and misconceptions about them.
 					Truthfully, in grade school we also had many of these prejudices and misconceptions, despite being Chinese ourselves.
-					Our aim for this project was to understand why these misconceptions exist and connect to Chinese International students to understand their
-					perspectives better and perhaps reconsider our own views and opinions on them.</p>
+					Our aim for this project was to understand why these misconceptions exist and connect to Chinese international students to understand their
+					perspectives better and critically rethink our own opinions on these students.</p>
 
 					<p class="para-fade"><em>They Are Your Classmates</em> was our way of connecting with these students that we largely ignored in school.
-					Through our research and experience creating this project, we have learned and empathized with these students’ stories;
+					Through our experience creating this project, we have learned from and empathized with these students’ stories;
 					now we want to share them with you, in hopes that you will learn something too.</p>
 				</div>
 			</section>
