--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animation.css">
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
@@ -24,7 +23,7 @@
 				<img id="brush-stroke-2" src="img/infographic-brush2.png" alt="yellow brush stroke">
 			</div>
 			<div id="index-container-fade-1" class="fade-in">
-				<p id="index-para-fade-1" class="para-fade">Between 2004 and 2015, the number of Chinese international students in Canada <strong>tripled</strong> from about <strong>40,000</strong> to <strong>120,000</strong> students.</p>
+				<p id="index-para-fade-1" class="para-fade">Between 2004 and 2015, the number of Chinese international students in Canada <a class="in-text-link" target="_blank" href="http://canadaimmigrants.com/chinese-students-canada/"><strong>tripled</strong> from about <strong>40,000</strong> to <strong>120,000</strong> students.</a></p>
 				<button class="button-next">next ></button>
 			</div>
 			<div id="index-container-fade-2" class="not-initially-visible">
