--- a/thank-you.html
+++ b/thank-you.html
@@ -34,6 +34,7 @@
               <a class="button-share" id="fb" href="https://www.facebook.com/sharer/sharer.php?u=theyareyourclassmates.ca" target="_blank">Share on Facebook</a>
               <a class="button-share" id="twitter" href="https://twitter.com/share?url=http://www.theyareyourclassmates.ca&text=The%20Chinese%20international%20student%20experience%20in%20Canadian%20high%20schools" target="_blank">Share on Twitter</a>
             </div>
+            <a href="citations.html" class="link-works-cited">View References</a>
           </div>
         </div>
       </section>
